# ted

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  Editor.cxx  Editor.hxx  Main.cxx
